fixed layout on small devices, text coloring and added footer links
fixed text coloring on safari

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -70,7 +70,7 @@
 
 .about__text h2{
     text-align: center;
-    margin: 4rem 10rem 2rem;
+    margin: 1.5rem 10rem 1.5rem;
 }
 
 .about__content {
@@ -88,7 +88,7 @@
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: auto;
     grid-gap: 1rem;
-    margin: 2rem 0 3rem;
+    margin: 2rem 0 1.5rem;
 }
 
 .about__card-right {
@@ -162,7 +162,7 @@
 
     .about__text h2{
         text-align: left;
-        margin: 3rem 2rem 4rem;
+        margin: 1.5rem 2rem 1.5rem;
     }    
 
     .about__card-row {
@@ -179,7 +179,7 @@
         width: 100%;
         display: flex;
         gap: 5%;
-        padding: 1rem;
+        padding: 0.5rem;
         text-align: left;
         align-items: center;
     }
@@ -188,9 +188,15 @@
         width: 100%;
         display: grid;
         gap: 5%;
-        padding: 1rem;
+        padding: 0rem;
         text-align: right;
         align-items: center;
+    }
+
+    .about__icon-set {
+        color: var(--color-primary-accent);
+        font-size: 4rem;
+        margin: 0.5rem;
     }
 }
 
