--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     --color-primary-variant: #fff9fb;
     --color-primary-accent: #87f5fb;
     --color-white: #ffffff;
-    --color-light: #c0c0c0;
+    --color-light: #b3b3b3;
 
     --transition: all 400ms ease;
 
@@ -57,6 +57,10 @@ h1, h2 ,h3, h4, h5 {
 
 h1 {
     font-size: 2.5rem;
+}
+
+p {
+    color: var(--color-light);
 }
 
 section {
